# avaliacao-tecnica-ctfacil

./: .gitignore  README.md  dump.rdb  main.py  pyproject.toml  scrapy_basico.py
utils/: enviar_dado_fila.py  tasks.py  worker.py
