[tool.poetry]
name = "avaliacao-tecnica-ctfacil"
version = "0.1.0"
description = "Projeto de avaliação tecnica"
authors = ["Andrey"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
